# projet-dev-app-sphinx

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
API/: main.py
docs/: export_openapi.py
docs/source/: api.rst  conf.py  index.rst  mon_api.rst
docs/source/_static/: openapi.json
public/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
public/.doctrees/: environment.pickle  index.doctree
public/_sources/: index.rst.txt
source/: conf.py
test/: test_valid.py
