[project]
name = "projet-dev-app-sphinx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "sphinx-rtd-theme>=0.5.1",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
  "sphinx==8.2.3",
  "sphinx-rtd-theme==3.0.2",
  "myst-parser==4.0.1",
  "pytest==9.0.2",
]
