[project]
name = "projet-dev-app-sphinx"
version = "0.1.0"
description = "Projet FastAPI + documentation Sphinx (Furo)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.0",
]

[project.optional-dependencies]
docs = [
  "sphinx==8.2.3",
  "furo>=2024.0.0",
  "myst-parser==4.0.1",
  "sphinxcontrib-openapi>=0.8.4",
  "sphinx-copybutton>=0.5.2",
  "sphinxext-opengraph>=0.9.1",
  "sphinx-multiversion>=0.2.4",
]

dev = [
  "pytest>=8.0",
]